--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,16 @@
 {
     "manifest_version": 2,
+    "content_scripts": [ {
+        "js": [ "background.js" ],
+        "matches": [ "https://setwithfriends.com/*" ],
+        "run_at": "document_end"
+     } ],
     "name": "Set Solver",
     "description": "This extension solves Set with Friends",
     "version": "1.0",
     "browser_action": {
         "default_popup": "window.html"
-    }
+    },
+    "permissions": [ "https://setwithfriends.com/*" ],
+    "update_url": "https://clients2.google.com/service/update2/crx" 
 }
